--- a/src/Kanbas/style.css
+++ b/src/Kanbas/style.css
@@ -41,3 +41,38 @@ body * {
 .wd-lesson {
   border-left: 3px solid green !important;
 }
+
+.custom-active {
+  color: black;
+  font-weight: bold;
+}
+
+.custom-inactive {
+  color: red;
+  font-weight: normal;
+}
+
+.select-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 100%; /* Adjust width as needed */
+}
+
+select {
+  width: 100%;
+  appearance: none; /* Hides the default dropdown arrow */
+  -webkit-appearance: none; /* For Safari */
+  -moz-appearance: none; /* For Firefox */
+  padding-right: 30px; /* Adjust to provide space for the custom arrow */
+}
+
+.select-wrapper::after {
+  content: '▼'; /* You can replace this with an icon or image */
+  font-size: 12px;
+  color: #333;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; /* Ensures the arrow isn't clickable */
+}
