--- a/src/Kanbas/style.css
+++ b/src/Kanbas/style.css
@@ -45,6 +45,7 @@ body * {
 .custom-active {
   color: black;
   font-weight: bold;
+  border-left: 3px solid black !important;
 }
 
 .custom-inactive {
